--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</button>
 
 		<aside class="panel">
-			<nav class="menu">
+			<nav class="menu" data-dark>
 				<legend class="menu-title">Menu</legend>
 				<a href="#seccion1" data-scroll-spy>Reloj</a>
 				<a href="#seccion2" data-scroll-spy>Eventos de teclado</a>
@@ -24,6 +24,7 @@
 				<a href="#seccion4" data-scroll-spy>Responsive con JavaScript</a>
 				<a href="#seccion5" data-scroll-spy>Responsive Tester</a>
 				<a href="#seccion6" data-scroll-spy>Detección de Dispositivos</a>
+				<a href="#seccion7" data-scroll-spy>Detección de la conexión</a>
 				<a href="#seccion8" data-scroll-spy>Detección de Cámara web</a>
 				<a href="#seccion9" data-scroll-spy>Geolocalizacion</a>
 				<a href="#seccion10" data-scroll-spy>Filtros de búsqueda</a>
@@ -264,8 +265,8 @@
 				</svg>
 			</button>
 
-			<button class="dark-theme-btn moon">
-				<img src="assets/moon.svg" alt="Moon" />
+			<button class="light-theme-btn">
+				<img src="assets/sun.svg" alt="Sun" />
 			</button>
 		</main>
 		<script src="js/index.js" type="module"></script>
