Agregando meta etiquetas

--- a/index.html
+++ b/index.html
@@ -3,22 +3,16 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta
-			name="description"
-			property="og:description"
-			content="Practicando JavaScript, sus eventos y el manejo del DOM"
-		/>
-		<meta name="twitter:card" />
-		<link rel="canonical" href="https://camil0guerrero.github.io/Practica_DOM/" />
-		<link rel="favicon" href="assets/favicon.png" />
-		<link rel="apple-touch-icon" href="assets/favicon.png" />
-		<meta name="theme-color" content="#094fb9" />
-		<meta property="og:title" content="Practicando JavaScript" />
-		<meta property="og:image" content="assets/image_twitter.jpg" />
-		<meta property="og:url" content="https://camil0guerrero.github.io/Practica_DOM/" />
-		<meta name="twitter:site" content="https://twitter.com/cristian321893" />
 		<link rel="stylesheet" href="css/style.css" />
-		<title>Scroll One Page</title>
+		<title>Practicando JavaScript</title>
+
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="https://twitter.com/cristian321893" />
+		<meta name="twitter:creator" content="@cristian321893" />
+		<meta property="og:url" content="https://camil0guerrero.github.io/Practica_DOM/" />
+		<meta property="og:title" content="Practicando JavaScript" />
+		<meta property="og:description" content="Practicando JavaScript, sus eventos y la manipulación del DOM " />
+		<meta property="og:image" content="assets/image.jpg" />
 	</head>
 	<body data-dark>
 		<header>
