Agregando meta etiquetas

--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="es" data-dark>
 	<head>
+		<!-- Global Metadata -->
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="icon" href="assets/favicon.png" />
+		<link rel="canonical" href="https://camil0guerrero.github.io/Practica_DOM/" />
+		<!-- Primary Meta Tags -->
 		<title>Practicando JavaScript</title>
-
-		<meta name="twitter:card" content="summary" />
-		<meta name="twitter:site" content="https://twitter.com/cristian321893" />
-		<meta name="twitter:creator" content="@cristian321893" />
+		<meta name="title" content="Practicando JavaScript" />
+		<meta name="description" content="Practicando con Javascript, sus eventos y manipulación del DOM" />
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://camil0guerrero.github.io/Practica_DOM/" />
 		<meta property="og:title" content="Practicando JavaScript" />
-		<meta property="og:description" content="Practicando JavaScript, sus eventos y la manipulación del DOM " />
+		<meta property="og:description" content="Practicando con Javascript, sus eventos y manipulación del DOM" />
 		<meta property="og:image" content="assets/image.jpg" />
+		<!-- twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="Practicando con Javascript, sus eventos y manipulación del DOM" />
+		<meta property="twitter:title" content="Practicando JavaScript" />
+		<meta property="twitter:description" content="Practicando con Javascript, sus eventos y manipulación del DOM" />
+		<meta property="twitter:image" content="assets/image.jpg" />
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body data-dark>
 		<header>
