--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- Global Metadata -->
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="assets/favicon.png" />
+		<link rel="icon" href="https://camil0guerrero.github.io/Practica_DOM/assets/favicon.png" />
 		<link rel="canonical" href="https://camil0guerrero.github.io/Practica_DOM/" />
 		<!-- Primary Meta Tags -->
 		<title>Practicando JavaScript</title>
@@ -15,14 +15,14 @@
 		<meta property="og:url" content="https://camil0guerrero.github.io/Practica_DOM/" />
 		<meta property="og:title" content="Practicando JavaScript" />
 		<meta property="og:description" content="Practicando con Javascript, sus eventos y manipulación del DOM" />
-		<meta property="og:image" content="assets/image.jpg" />
+		<meta property="og:image" content="https://camil0guerrero.github.io/Practica_DOM/assets/image.jpg" />
 		<!-- twitter -->
-		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:url" content="Practicando con Javascript, sus eventos y manipulación del DOM" />
+		<meta property="twitter:card" content="summary" />
+		<meta property="twitter:url" content="https://camil0guerrero.github.io/Practica_DOM/" />
 		<meta property="twitter:title" content="Practicando JavaScript" />
 		<meta property="twitter:description" content="Practicando con Javascript, sus eventos y manipulación del DOM" />
 		<meta property="twitter:image" content="assets/image.jpg" />
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="https://camil0guerrero.github.io/Practica_DOM/css/style.css" />
 	</head>
 	<body data-dark>
 		<header>
