Agregando meta etiquetas

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<meta property="twitter:url" content="https://camil0guerrero.github.io/Practica_DOM/" />
 		<meta property="twitter:title" content="Practicando JavaScript" />
 		<meta property="twitter:description" content="Practicando con Javascript, sus eventos y manipulación del DOM" />
-		<meta property="twitter:image" content="assets/image.jpg" />
+		<meta property="og:image" content="https://camil0guerrero.github.io/Practica_DOM/assets/image.jpg" />
 		<link rel="stylesheet" href="https://camil0guerrero.github.io/Practica_DOM/css/style.css" />
 	</head>
 	<body data-dark>
